deploy/production/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kaztube
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
  selector:
    project: kaztube
---
apiVersion: v1
kind: Service
metadata:
  name: kaztube-session
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
  selector:
    project: kaztube-session
---
