deploy/production/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaztube
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kaztube.kz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kaztube
                port:
                  number: 80
